objects/lightsideapps__Deployment_Connection__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production/Developer Edition</fullName>
                    <default>true</default>
                    <label>Production/Developer Edition</label>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__Hostname__c</fullName>
        <inlineHelpText>The base name of the URL prior to &apos;.salesforce.com&apos;, normally comprised of your Salesforce Domain Name and &apos;.my&apos; eg if you domain name is &apos;ExampleName&apos; then the Hostname is &apos;ExampleName.my&apos;</inlineHelpText>
        <label>Hostname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Is_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Security_Token__c</fullName>
        <label>Security Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Failed Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Validation_Messages__c</fullName>
        <label>Validation Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Deployment Connection</label>
    <listViews>
        <fullName>lightsideapps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>lightsideapps__Name_Check</fullName>
        <active>true</active>
        <description>The Name can only contain underscores and alphanumeric characters. It must be unique, begin with a letter, not include spaces, not end with an underscore, and not contain two consecutive underscores</description>
        <errorConditionFormula>NOT(REGEX(Name,&quot;^[A-Za-z][A-Za-z0-9]*(?:_[A-Za-z0-9]+)*$&quot;))</errorConditionFormula>
        <errorMessage>The Name can only contain underscores and alphanumeric characters. It must be unique, begin with a letter, not include spaces, not end with an underscore, and not contain two consecutive underscores</errorMessage>
    </validationRules>
</CustomObject>